--- a/books.bib
+++ b/books.bib
@@ -1,6 +1,6 @@
 @Book{1,
-  title = {The genetic lottery},
-  author = {K. Paige Harden},
-  publisher = {Princeton},
+  title = {Mobile sensing for studying personality dynamics in daily life},
+  author = {Scopus - Elsevier},
+  publisher = {The Handbook of Personality Dynamics and Processes},
   year = {2021},
 }
