--- a/preprints.bib
+++ b/preprints.bib
@@ -1,6 +1,17 @@
- @article{1Cooper_2023, title={Threat learning by proxy: Semantic structures facilitate emotional memory integration throughout the MTL and medial prefrontal cortex}, url={http://dx.doi.org/10.31234/osf.io/c7zyh}, DOI={10.31234/osf.io/c7zyh}, publisher={Center for Open Science}, author={Cooper, Samuel Emerson and Hennings, Augustin C. and Bibb, Sophia and Lewis-Peacock, Jarrod and Dunsmoor, Joseph E.}, year={2023}, month=oct }
+ @article{1Vinci_Booher_2023, title={Associative white matter tracts selectively predict sensorimotor learning}, url={http://dx.doi.org/10.1101/2023.01.10.523345}, DOI={10.1101/2023.01.10.523345}, publisher={Cold Spring Harbor Laboratory}, author={Vinci-Booher, S. and McDonald, D.J. and Berquist, E. and Pestilli, F.}, year={2023}, month=jan }
 
- @article{2DeRosa_2023, title={Neural Systems Underlying the Implementation of Working Memory Removal Operations}, url={http://dx.doi.org/10.1101/2023.02.14.519204}, DOI={10.1101/2023.02.14.519204}, publisher={Cold Spring Harbor Laboratory}, author={DeRosa, Jacob and Kim, Hyojeong and Lewis-Peacock, Jarrod and Banich, Marie T.}, year={2023}, month=feb }
+@misc{https://doi.org/10.48550/arxiv.2208.02942,
+  doi = {10.48550/ARXIV.2208.02942},
+  url = {https://arxiv.org/abs/2208.02942},
+  author = {Liang, Xiaoxuan and Cohen, Aaron and Heinsfeld, Anibal Solón and Pestilli, Franco and McDonald, Daniel J.},
+  keywords = {Methodology (stat.ME), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {sparsegl: An R Package for Estimating Sparse Group Lasso},
+  publisher = {arXiv},
+  year = 20222},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
 
- @article{3Keller_2021, title={Rewarded extinction increases amygdalar connectivity and stabilizes long-term memory traces in the vmPFC}, url={http://dx.doi.org/10.1101/2021.12.08.471649}, DOI={10.1101/2021.12.08.471649}, publisher={Cold Spring Harbor Laboratory}, author={Keller, Nicole E. and Hennings, Augustin C. and Leiker, Emily K. and Lewis-Peacock, Jarrod A. and Dunsmoor, Joseph E.}, year={2021}, month=dec }
+ @article{3Allen_2021, title={A massive 7T fMRI dataset to bridge cognitive and computational neuroscience}, url={http://dx.doi.org/10.1101/2021.02.22.432340}, DOI={10.1101/2021.02.22.432340}, publisher={Cold Spring Harbor Laboratory}, author={Allen, Emily J. and St-Yves, Ghislain and Wu, Yihan and Breedlove, Jesse L. and Dowdle, Logan T. and Caron, Brad and Pestilli, Franco and Charest, Ian and Hutchinson, J. Benjamin and Naselaris, Thomas and Kay, Kendrick}, year={2021}, month=feb }
+
+ @article{4Parker_2021, title={The Spread of COVID-19 Increases With Individual Mobility and Depends on Political Leaning}, url={http://dx.doi.org/10.21203/rs.3.rs-147801/v1}, DOI={10.21203/rs.3.rs-147801/v1}, publisher={Research Square Platform LLC}, author={Parker, Chris and Mejia, Jorge and Pestilli, Franco}, year={2021}, month=feb }
 
