--- a/pubs.bib
+++ b/pubs.bib
@@ -1,32 +1,38 @@
- @article{1DeRosa_2023, title={Neural Systems Underlying the Implementation of Working Memory Removal Operations}, volume={44}, ISSN={1529-2401}, url={http://dx.doi.org/10.1523/jneurosci.0283-23.2023}, DOI={10.1523/jneurosci.0283-23.2023}, number={2}, journal={The Journal of Neuroscience}, publisher={Society for Neuroscience}, author={DeRosa, Jacob and Kim, Hyojeong and Lewis-Peacock, Jarrod and Banich, Marie T.}, year={2023}, month=nov, pages={e0283232023} }
+ @article{1Levitas_2024, title={ezBIDS: Guided standardization of neuroimaging data interoperable with major data archives and platforms}, volume={11}, ISSN={2052-4463}, url={http://dx.doi.org/10.1038/s41597-024-02959-0}, DOI={10.1038/s41597-024-02959-0}, number={1}, journal={Scientific Data}, publisher={Springer Science and Business Media LLC}, author={Levitas, Daniel and Hayashi, Soichi and Vinci-Booher, Sophia and Heinsfeld, Anibal and Bhatia, Dheeraj and Lee, Nicholas and Galassi, Anthony and Niso, Guiomar and Pestilli, Franco}, year={2024}, month=feb }
 
- @article{2Zhang_2023, title={Bend but don’t break: Prioritization protects working memory from displacement but leaves it vulnerable to distortion from distraction}, volume={239}, ISSN={0010-0277}, url={http://dx.doi.org/10.1016/j.cognition.2023.105574}, DOI={10.1016/j.cognition.2023.105574}, journal={Cognition}, publisher={Elsevier BV}, author={Zhang, Ziyao and Lewis-Peacock, Jarrod A.}, year={2023}, month=oct, pages={105574} }
+ @article{2Renton_2024, title={Neurodesk: an accessible, flexible and portable data analysis environment for reproducible neuroimaging}, ISSN={1548-7105}, url={http://dx.doi.org/10.1038/s41592-023-02145-x}, DOI={10.1038/s41592-023-02145-x}, journal={Nature Methods}, publisher={Springer Science and Business Media LLC}, author={Renton, Angela I. and Dao, Thuy T. and Johnstone, Tom and Civier, Oren and Sullivan, Ryan P. and White, David J. and Lyons, Paris and Slade, Benjamin M. and Abbott, David F. and Amos, Toluwani J. and Bollmann, Saskia and Botting, Andy and Campbell, Megan E. J. and Chang, Jeryn and Close, Thomas G. and Dörig, Monika and Eckstein, Korbinian and Egan, Gary F. and Evas, Stefanie and Flandin, Guillaume and Garner, Kelly G. and Garrido, Marta I. and Ghosh, Satrajit S. and Grignard, Martin and Halchenko, Yaroslav O. and Hannan, Anthony J. and Heinsfeld, Anibal S. and Huber, Laurentius and Hughes, Matthew E. and Kaczmarzyk, Jakub R. and Kasper, Lars and Kuhlmann, Levin and Lou, Kexin and Mantilla-Ramos, Yorguin-Jose and Mattingley, Jason B. and Meier, Michael L. and Morris, Jo and Narayanan, Akshaiy and Pestilli, Franco and Puce, Aina and Ribeiro, Fernanda L. and Rogasch, Nigel C. and Rorden, Chris and Schira, Mark M. and Shaw, Thomas B. and Sowman, Paul F. and Spitz, Gershon and Stewart, Ashley W. and Ye, Xincheng and Zhu, Judy D. and Narayanan, Aswin and Bollmann, Steffen}, year={2024}, month=jan }
 
- @article{3Chiarello_2023, title={The Effect of Biomechanical Features on Classification of Dual-Task Gait}, volume={23}, ISSN={2379-9153}, url={http://dx.doi.org/10.1109/jsen.2022.3227475}, DOI={10.1109/jsen.2022.3227475}, number={3}, journal={IEEE Sensors Journal}, publisher={Institute of Electrical and Electronics Engineers (IEEE)}, author={Chiarello, Mark and Lee, Jeonghwan and Salinas, Mandy McClintock and Hilsabeck, Robin C. and Lewis-Peacock, Jarrod and Sulzer, James}, year={2023}, month=feb, pages={3079–3089} }
+ @article{3Cheng_2022, title={Denoising diffusion weighted imaging data using convolutional neural networks}, volume={17}, ISSN={1932-6203}, url={http://dx.doi.org/10.1371/journal.pone.0274396}, DOI={10.1371/journal.pone.0274396}, number={9}, journal={PLOS ONE}, publisher={Public Library of Science (PLoS)}, author={Cheng, Hu and Vinci-Booher, Sophia and Wang, Jian and Caron, Bradley and Wen, Qiuting and Newman, Sharlene and Pestilli, Franco}, editor={Yap, Pew-Thian}, year={2022}, month=sep, pages={e0274396} }
 
- @article{4Bruning_2023, title={Rumination burdens the updating of working memory}, volume={85}, ISSN={1943-393X}, url={http://dx.doi.org/10.3758/s13414-022-02649-2}, DOI={10.3758/s13414-022-02649-2}, number={5}, journal={Attention, Perception, &amp; Psychophysics}, publisher={Springer Science and Business Media LLC}, author={Bruning, Allison L. and Mallya, Meghan M. and Lewis-Peacock, Jarrod A.}, year={2023}, month=jan, pages={1452–1460} }
+ @article{4Niso_2022, title={Open and reproducible neuroimaging: From study inception to publication}, volume={263}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2022.119623}, DOI={10.1016/j.neuroimage.2022.119623}, journal={NeuroImage}, publisher={Elsevier BV}, author={Niso, Guiomar and Botvinik-Nezer, Rotem and Appelhoff, Stefan and De La Vega, Alejandro and Esteban, Oscar and Etzel, Joset A. and Finc, Karolina and Ganz, Melanie and Gau, Rémi and Halchenko, Yaroslav O. and Herholz, Peer and Karakuzu, Agah and Keator, David B. and Markiewicz, Christopher J. and Maumet, Camille and Pernet, Cyril R. and Pestilli, Franco and Queder, Nazek and Schmitt, Tina and Sójka, Weronika and Wagner, Adina S. and Whitaker, Kirstie J. and Rieger, Jochem W.}, year={2022}, month=nov, pages={119623} }
 
- @article{5Zhang_2023, title={Prioritization sharpens working memories but does not protect them from distraction.}, volume={152}, ISSN={0096-3445}, url={http://dx.doi.org/10.1037/xge0001309}, DOI={10.1037/xge0001309}, number={4}, journal={Journal of Experimental Psychology: General}, publisher={American Psychological Association (APA)}, author={Zhang, Ziyao and Lewis-Peacock, Jarrod A.}, year={2023}, month=apr, pages={1158–1174} }
+ @article{5Sreenivasan_2022, title={GPU-accelerated connectome discovery at scale}, volume={2}, ISSN={2662-8457}, url={http://dx.doi.org/10.1038/s43588-022-00250-z}, DOI={10.1038/s43588-022-00250-z}, number={5}, journal={Nature Computational Science}, publisher={Springer Science and Business Media LLC}, author={Sreenivasan, Varsha and Kumar, Sawan and Pestilli, Franco and Talukdar, Partha and Sridharan, Devarajan}, year={2022}, month=may, pages={298–306} }
 
- @article{6Hennings_2022, title={Pattern analysis of neuroimaging data reveals novel insights on threat learning and extinction in humans}, volume={142}, ISSN={0149-7634}, url={http://dx.doi.org/10.1016/j.neubiorev.2022.104918}, DOI={10.1016/j.neubiorev.2022.104918}, journal={Neuroscience &amp; Biobehavioral Reviews}, publisher={Elsevier BV}, author={Hennings, Augustin C. and Cooper, Samuel E. and Lewis-Peacock, Jarrod A. and Dunsmoor, Joseph E.}, year={2022}, month=nov, pages={104918} }
+ @article{6Vinci_Booher_2022, title={Development of white matter tracts between and within the dorsal and ventral streams}, volume={227}, ISSN={1863-2661}, url={http://dx.doi.org/10.1007/s00429-021-02414-5}, DOI={10.1007/s00429-021-02414-5}, number={4}, journal={Brain Structure and Function}, publisher={Springer Science and Business Media LLC}, author={Vinci-Booher, S. and Caron, B. and Bullock, D. and James, K. and Pestilli, F.}, year={2022}, month=mar, pages={1457–1477} }
 
- @article{7Keller_2022, title={Rewarded Extinction Increases Amygdalar Connectivity and Stabilizes Long-Term Memory Traces in the vmPFC}, volume={42}, ISSN={1529-2401}, url={http://dx.doi.org/10.1523/jneurosci.0075-22.2022}, DOI={10.1523/jneurosci.0075-22.2022}, number={29}, journal={The Journal of Neuroscience}, publisher={Society for Neuroscience}, author={Keller, Nicole E. and Hennings, Augustin C. and Leiker, Emily K. and Lewis-Peacock, Jarrod A. and Dunsmoor, Joseph E.}, year={2022}, month=jun, pages={5717–5729} }
+ @article{7Bullock_2022, title={A taxonomy of the brain’s white matter: twenty-one major tracts for the 21st century}, volume={32}, ISSN={1460-2199}, url={http://dx.doi.org/10.1093/cercor/bhab500}, DOI={10.1093/cercor/bhab500}, number={20}, journal={Cerebral Cortex}, publisher={Oxford University Press (OUP)}, author={Bullock, Daniel N and Hayday, Elena A and Grier, Mark D and Tang, Wei and Pestilli, Franco and Heilbronner, Sarah R}, year={2022}, month=feb, pages={4524–4548} }
 
- @article{8Koslov_2022, title={Distinct monitoring strategies underlie costs and performance in prospective memory}, volume={50}, ISSN={1532-5946}, url={http://dx.doi.org/10.3758/s13421-022-01275-5}, DOI={10.3758/s13421-022-01275-5}, number={8}, journal={Memory &amp; Cognition}, publisher={Springer Science and Business Media LLC}, author={Koslov, Seth R. and Bulls, Landry S. and Lewis-Peacock, Jarrod A.}, year={2022}, month=apr, pages={1772–1788} }
+ @article{8Babo_Rebelo_2021, title={Visual Information Routes in the Posterior Dorsal and Ventral Face Network Studied with Intracranial Neurophysiology and White Matter Tract Endpoints}, volume={32}, ISSN={1460-2199}, url={http://dx.doi.org/10.1093/cercor/bhab212}, DOI={10.1093/cercor/bhab212}, number={2}, journal={Cerebral Cortex}, publisher={Oxford University Press (OUP)}, author={Babo-Rebelo, M and Puce, A and Bullock, D and Hugueville, L and Pestilli, F and Adam, C and Lehongre, K and Lambrecq, V and Dinkelacker, V and George, N}, year={2021}, month=jul, pages={342–366} }
 
- @article{9Mallett_2022, title={Working Memory Swap Errors Have Identifiable Neural Representations}, volume={34}, ISSN={1530-8898}, url={http://dx.doi.org/10.1162/jocn_a_01831}, DOI={10.1162/jocn_a_01831}, number={5}, journal={Journal of Cognitive Neuroscience}, publisher={MIT Press - Journals}, author={Mallett, Remington and Lorenc, Elizabeth S. and Lewis-Peacock, Jarrod A.}, year={2022}, month=mar, pages={776–786} }
+ @article{9Echevarria_Cooper_2021, title={Mapping the Microstructure and Striae of the Human Olfactory Tract with Diffusion MRI}, volume={42}, ISSN={1529-2401}, url={http://dx.doi.org/10.1523/jneurosci.1552-21.2021}, DOI={10.1523/jneurosci.1552-21.2021}, number={1}, journal={The Journal of Neuroscience}, publisher={Society for Neuroscience}, author={Echevarria-Cooper, Shiloh L. and Zhou, Guangyu and Zelano, Christina and Pestilli, Franco and Parrish, Todd B. and Kahnt, Thorsten}, year={2021}, month=nov, pages={58–68} }
 
- @article{10Hennings_2022, title={Neural reinstatement reveals divided organization of fear and extinction memories in the human brain}, volume={32}, ISSN={0960-9822}, url={http://dx.doi.org/10.1016/j.cub.2021.11.004}, DOI={10.1016/j.cub.2021.11.004}, number={2}, journal={Current Biology}, publisher={Elsevier BV}, author={Hennings, Augustin C. and McClay, Mason and Drew, Michael R. and Lewis-Peacock, Jarrod A. and Dunsmoor, Joseph E.}, year={2022}, month=jan, pages={304-314.e5} }
+ @article{10Allen_2021, title={A massive 7T fMRI dataset to bridge cognitive neuroscience and artificial intelligence}, volume={25}, ISSN={1546-1726}, url={http://dx.doi.org/10.1038/s41593-021-00962-x}, DOI={10.1038/s41593-021-00962-x}, number={1}, journal={Nature Neuroscience}, publisher={Springer Science and Business Media LLC}, author={Allen, Emily J. and St-Yves, Ghislain and Wu, Yihan and Breedlove, Jesse L. and Prince, Jacob S. and Dowdle, Logan T. and Nau, Matthias and Caron, Brad and Pestilli, Franco and Charest, Ian and Hutchinson, J. Benjamin and Naselaris, Thomas and Kay, Kendrick}, year={2021}, month=dec, pages={116–126} }
 
- @article{11Lu_2021, title={Multi-scale neural decoding and analysis}, volume={18}, ISSN={1741-2552}, url={http://dx.doi.org/10.1088/1741-2552/ac160f}, DOI={10.1088/1741-2552/ac160f}, number={4}, journal={Journal of Neural Engineering}, publisher={IOP Publishing}, author={Lu, Hung-Yun and Lorenc, Elizabeth S and Zhu, Hanlin and Kilmarx, Justin and Sulzer, James and Xie, Chong and Tobler, Philippe N and Watrous, Andrew J and Orsborn, Amy L and Lewis-Peacock, Jarrod and Santacruz, Samantha R}, year={2021}, month=aug, pages={045013} }
+ @article{11Eke_2022, title={International data governance for neuroscience}, volume={110}, ISSN={0896-6273}, url={http://dx.doi.org/10.1016/j.neuron.2021.11.017}, DOI={10.1016/j.neuron.2021.11.017}, number={4}, journal={Neuron}, publisher={Elsevier BV}, author={Eke, Damian O. and Bernard, Amy and Bjaalie, Jan G. and Chavarriaga, Ricardo and Hanakawa, Takashi and Hannan, Anthony J. and Hill, Sean L. and Martone, Maryann E. and McMahon, Agnes and Ruebel, Oliver and Crook, Sharon and Thiels, Edda and Pestilli, Franco}, year={2022}, month=feb, pages={600–612} }
 
- @article{12Hennings_2021, title={Emotional learning retroactively enhances item memory but distorts source attribution}, volume={28}, ISSN={1549-5485}, url={http://dx.doi.org/10.1101/lm.053371.120}, DOI={10.1101/lm.053371.120}, number={6}, journal={Learning &amp; Memory}, publisher={Cold Spring Harbor Laboratory}, author={Hennings, Augustin C. and Lewis-Peacock, Jarrod A. and Dunsmoor, Joseph E.}, year={2021}, month=may, pages={178–186} }
+ @article{12Puzniak_2021, title={CHIASM, the human brain albinism and achiasma MRI dataset}, volume={8}, ISSN={2052-4463}, url={http://dx.doi.org/10.1038/s41597-021-01080-w}, DOI={10.1038/s41597-021-01080-w}, number={1}, journal={Scientific Data}, publisher={Springer Science and Business Media LLC}, author={Puzniak, Robert J. and McPherson, Brent and Ahmadi, Khazar and Herbik, Anne and Kaufmann, Jörn and Liebe, Thomas and Gouws, Andre and Morland, Antony B. and Gottlob, Irene and Hoffmann, Michael B. and Pestilli, Franco}, year={2021}, month=nov }
 
- @article{13Oblak_2021, title={Differential neural plasticity of individual fingers revealed by fMRI neurofeedback}, volume={125}, ISSN={1522-1598}, url={http://dx.doi.org/10.1152/jn.00509.2020}, DOI={10.1152/jn.00509.2020}, number={5}, journal={Journal of Neurophysiology}, publisher={American Physiological Society}, author={Oblak, Ethan and Lewis-Peacock, Jarrod and Sulzer, James}, year={2021}, month=may, pages={1720–1734} }
+ @article{13McPherson_2021, title={A single mode of population covariation associates brain networks structure and behavior and predicts individual subjects’ age}, volume={4}, ISSN={2399-3642}, url={http://dx.doi.org/10.1038/s42003-021-02451-0}, DOI={10.1038/s42003-021-02451-0}, number={1}, journal={Communications Biology}, publisher={Springer Science and Business Media LLC}, author={McPherson, Brent C. and Pestilli, Franco}, year={2021}, month=aug }
 
- @article{14Chiu_2021, title={Separation of item and context in item-method directed forgetting}, volume={235}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2021.117983}, DOI={10.1016/j.neuroimage.2021.117983}, journal={NeuroImage}, publisher={Elsevier BV}, author={Chiu, Yi-Chieh and Wang, Tracy H. and Beck, Diane M. and Lewis-Peacock, Jarrod A. and Sahakyan, Lili}, year={2021}, month=jul, pages={117983} }
+ @article{14Sani_2021, title={The human endogenous attentional control network includes a ventro-temporal cortical node}, volume={12}, ISSN={2041-1723}, url={http://dx.doi.org/10.1038/s41467-020-20583-5}, DOI={10.1038/s41467-020-20583-5}, number={1}, journal={Nature Communications}, publisher={Springer Science and Business Media LLC}, author={Sani, Ilaria and Stemmann, Heiko and Caron, Bradley and Bullock, Daniel and Stemmler, Torsten and Fahle, Manfred and Pestilli, Franco and Freiwald, Winrich A.}, year={2021}, month=jan }
 
- @article{15Lorenc_2021, title={Distraction in Visual Working Memory: Resistance is Not Futile}, volume={25}, ISSN={1364-6613}, url={http://dx.doi.org/10.1016/j.tics.2020.12.004}, DOI={10.1016/j.tics.2020.12.004}, number={3}, journal={Trends in Cognitive Sciences}, publisher={Elsevier BV}, author={Lorenc, Elizabeth S. and Mallett, Remington and Lewis-Peacock, Jarrod A.}, year={2021}, month=mar, pages={228–239} }
+ @article{15Hanke_2021, title={In defense of decentralized research data management}, volume={0}, ISSN={0947-0875}, url={http://dx.doi.org/10.1515/nf-2020-0037}, DOI={10.1515/nf-2020-0037}, number={0}, journal={Neuroforum}, publisher={Walter de Gruyter GmbH}, author={Hanke, Michael and Pestilli, Franco and Wagner, Adina S. and Markiewicz, Christopher J. and Poline, Jean-Baptiste and Halchenko, Yaroslav O.}, year={2021}, month=jan }
 
- @article{16Kilmarx_2021, title={Towards a common template for neural reinforcement of finger individuation}, volume={11}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-020-80166-8}, DOI={10.1038/s41598-020-80166-8}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Kilmarx, Justin and Oblak, Ethan and Sulzer, James and Lewis-Peacock, Jarrod}, year={2021}, month=jan }
+ @article{16Bert__2021, title={Classifyber, a robust streamline-based linear classifier for white matter bundle segmentation}, volume={224}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2020.117402}, DOI={10.1016/j.neuroimage.2020.117402}, journal={NeuroImage}, publisher={Elsevier BV}, author={Bertò, Giulia and Bullock, Daniel and Astolfi, Pietro and Hayashi, Soichi and Zigiotto, Luca and Annicchiarico, Luciano and Corsini, Francesco and De Benedictis, Alessandro and Sarubbo, Silvio and Pestilli, Franco and Avesani, Paolo and Olivetti, Emanuele}, year={2021}, month=jan, pages={117402} }
+
+ @article{17Caron_2021, title={Collegiate athlete brain data for white matter mapping and network neuroscience}, volume={8}, ISSN={2052-4463}, url={http://dx.doi.org/10.1038/s41597-021-00823-z}, DOI={10.1038/s41597-021-00823-z}, number={1}, journal={Scientific Data}, publisher={Springer Science and Business Media LLC}, author={Caron, Bradley and Stuck, Ricardo and McPherson, Brent and Bullock, Daniel and Kitchell, Lindsey and Faskowitz, Joshua and Kellar, Derek and Cheng, Hu and Newman, Sharlene and Port, Nicholas and Pestilli, Franco}, year={2021}, month=feb }
+
+ @article{18Schilling_2021, title={Tractography dissection variability: What happens when 42 groups dissect 14 white matter bundles on the same dataset?}, volume={243}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2021.118502}, DOI={10.1016/j.neuroimage.2021.118502}, journal={NeuroImage}, publisher={Elsevier BV}, author={Schilling, Kurt G. and Rheault, François and Petit, Laurent and Hansen, Colin B. and Nath, Vishwesh and Yeh, Fang-Cheng and Girard, Gabriel and Barakovic, Muhamed and Rafael-Patino, Jonathan and Yu, Thomas and Fischi-Gomez, Elda and Pizzolato, Marco and Ocampo-Pineda, Mario and Schiavi, Simona and Canales-Rodríguez, Erick J. and Daducci, Alessandro and Granziera, Cristina and Innocenti, Giorgio and Thiran, Jean-Philippe and Mancini, Laura and Wastling, Stephen and Cocozza, Sirio and Petracca, Maria and Pontillo, Giuseppe and Mancini, Matteo and Vos, Sjoerd B. and Vakharia, Vejay N. and Duncan, John S. and Melero, Helena and Manzanedo, Lidia and Sanz-Morales, Emilio and Peña-Melián, Ángel and Calamante, Fernando and Attyé, Arnaud and Cabeen, Ryan P. and Korobova, Laura and Toga, Arthur W. and Vijayakumari, Anupa Ambili and Parker, Drew and Verma, Ragini and Radwan, Ahmed and Sunaert, Stefan and Emsell, Louise and De Luca, Alberto and Leemans, Alexander and Bajada, Claude J. and Haroon, Hamied and Azadbakht, Hojjatollah and Chamberland, Maxime and Genc, Sila and Tax, Chantal M.W. and Yeh, Ping-Hong and Srikanchana, Rujirutana and Mcknight, Colin D. and Yang, Joseph Yuan-Mou and Chen, Jian and Kelly, Claire E. and Yeh, Chun-Hung and Cochereau, Jerome and Maller, Jerome J. and Welton, Thomas and Almairac, Fabien and Seunarine, Kiran K and Clark, Chris A. and Zhang, Fan and Makris, Nikos and Golby, Alexandra and Rathi, Yogesh and O’Donnell, Lauren J. and Xia, Yihao and Aydogan, Dogu Baran and Shi, Yonggang and Fernandes, Francisco Guerreiro and Raemaekers, Mathijs and Warrington, Shaun and Michielse, Stijn and Ramírez-Manzanares, Alonso and Concha, Luis and Aranda, Ramón and Meraz, Mariano Rivera and Lerma-Usabiaga, Garikoitz and Roitman, Lucas and Fekonja, Lucius S. and Calarco, Navona and Joseph, Michael and Nakua, Hajer and Voineskos, Aristotle N. and Karan, Philippe and Grenier, Gabrielle and Legarreta, Jon Haitz and Adluru, Nagesh and Nair, Veena A. and Prabhakaran, Vivek and Alexander, Andrew L. and Kamagata, Koji and Saito, Yuya and Uchida, Wataru and Andica, Christina and Abe, Masahiro and Bayrak, Roza G. and Wheeler-Kingshott, Claudia A.M. Gandini and D’Angelo, Egidio and Palesi, Fulvia and Savini, Giovanni and Rolandi, Nicolò and Guevara, Pamela and Houenou, Josselin and López-López, Narciso and Mangin, Jean-François and Poupon, Cyril and Román, Claudio and Vázquez, Andrea and Maffei, Chiara and Arantes, Mavilde and Andrade, José Paulo and Silva, Susana Maria and Calhoun, Vince D. and Caverzasi, Eduardo and Sacco, Simone and Lauricella, Michael and Pestilli, Franco and Bullock, Daniel and Zhan, Yang and Brignoni-Perez, Edith and Lebel, Catherine and Reynolds, Jess E and Nestrasil, Igor and Labounek, René and Lenglet, Christophe and Paulson, Amy and Aulicka, Stefania and Heilbronner, Sarah R. and Heuer, Katja and Chandio, Bramsh Qamar and Guaje, Javier and Tang, Wei and Garyfallidis, Eleftherios and Raja, Rajikha and Anderson, Adam W. and Landman, Bennett A. and Descoteaux, Maxime}, year={2021}, month=nov, pages={118502} }
+
+ @article{19Hanekamp_2021, title={White matter alterations in glaucoma and monocular blindness differ outside the visual system}, volume={11}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-021-85602-x}, DOI={10.1038/s41598-021-85602-x}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Hanekamp, Sandra and Ćurčić-Blake, Branislava and Caron, Bradley and McPherson, Brent and Timmer, Anneleen and Prins, Doety and Boucard, Christine C. and Yoshida, Masaki and Ida, Masahiro and Hunt, David and Jansonius, Nomdo M. and Pestilli, Franco and Cornelissen, Frans W.}, year={2021}, month=mar }
 
