--- a/chaps.bib
+++ b/chaps.bib
@@ -1,14 +1,9 @@
+ @inbook{Peters_2022, title={The Big Data toolkit for psychologists: Data sources and methodologies.}, ISBN={9781433838477}, url={http://dx.doi.org/10.1037/0000290-004}, DOI={10.1037/0000290-004}, booktitle={The psychology of technology: Social science research in the age of Big Data.}, publisher={American Psychological Association}, author={Peters, Heinrich and Marrero, Zachariah and Gosling, Samuel D.}, year={2022}, pages={87–124} }
+
 @InCollection{1,
-  title = {Forgetting},
-  author = {Jarrod Lewis-Peacock},
-  booktitle = {Encyclopedia of the Human Brain, 2nd edition},
-  year = {2023},
-  publisher = {.},
-}
-@InCollection{2,
-  title = {Curating the contents of working memory},
-  author = {Jarrod Lewis-Peacock},
-  booktitle = {Visual Memory},
-  year = {2022},
+  title = {Putting personality in its place: A geographical perspective on personality traits.},
+  author = {Samuel Gosling},
+  booktitle = {Handbook of personality: Theory and research},
+  year = {2021},
   publisher = {.},
 }
