--- a/chaps.bib
+++ b/chaps.bib
@@ -1,9 +1,7 @@
- @inbook{Peters_2022, title={The Big Data toolkit for psychologists: Data sources and methodologies.}, ISBN={9781433838477}, url={http://dx.doi.org/10.1037/0000290-004}, DOI={10.1037/0000290-004}, booktitle={The psychology of technology: Social science research in the age of Big Data.}, publisher={American Psychological Association}, author={Peters, Heinrich and Marrero, Zachariah and Gosling, Samuel D.}, year={2022}, pages={87–124} }
-
 @InCollection{1,
-  title = {Putting personality in its place: A geographical perspective on personality traits.},
-  author = {Samuel Gosling},
-  booktitle = {Handbook of personality: Theory and research},
-  year = {2021},
+  title = {Mobile Sensing in Developmental Science: A practical guide for researchers.},
+  author = {Kaya {de Barbaro}},
+  booktitle = {Mobile Sensing in Psychology: Methods and Applications},
+  year = {2023},
   publisher = {.},
 }
