--- a/pubs.bib
+++ b/pubs.bib
@@ -1,38 +1,24 @@
- @article{1Levitas_2024, title={ezBIDS: Guided standardization of neuroimaging data interoperable with major data archives and platforms}, volume={11}, ISSN={2052-4463}, url={http://dx.doi.org/10.1038/s41597-024-02959-0}, DOI={10.1038/s41597-024-02959-0}, number={1}, journal={Scientific Data}, publisher={Springer Science and Business Media LLC}, author={Levitas, Daniel and Hayashi, Soichi and Vinci-Booher, Sophia and Heinsfeld, Anibal and Bhatia, Dheeraj and Lee, Nicholas and Galassi, Anthony and Niso, Guiomar and Pestilli, Franco}, year={2024}, month=feb }
+ @article{1Khante_2023, title={Auditory chaos classification in real-world environments}, volume={5}, ISSN={2673-253X}, url={http://dx.doi.org/10.3389/fdgth.2023.1261057}, DOI={10.3389/fdgth.2023.1261057}, journal={Frontiers in Digital Health}, publisher={Frontiers Media SA}, author={Khante, Priyanka and Thomaz, Edison and de Barbaro, Kaya}, year={2023}, month=dec }
 
- @article{2Renton_2024, title={Neurodesk: an accessible, flexible and portable data analysis environment for reproducible neuroimaging}, ISSN={1548-7105}, url={http://dx.doi.org/10.1038/s41592-023-02145-x}, DOI={10.1038/s41592-023-02145-x}, journal={Nature Methods}, publisher={Springer Science and Business Media LLC}, author={Renton, Angela I. and Dao, Thuy T. and Johnstone, Tom and Civier, Oren and Sullivan, Ryan P. and White, David J. and Lyons, Paris and Slade, Benjamin M. and Abbott, David F. and Amos, Toluwani J. and Bollmann, Saskia and Botting, Andy and Campbell, Megan E. J. and Chang, Jeryn and Close, Thomas G. and Dörig, Monika and Eckstein, Korbinian and Egan, Gary F. and Evas, Stefanie and Flandin, Guillaume and Garner, Kelly G. and Garrido, Marta I. and Ghosh, Satrajit S. and Grignard, Martin and Halchenko, Yaroslav O. and Hannan, Anthony J. and Heinsfeld, Anibal S. and Huber, Laurentius and Hughes, Matthew E. and Kaczmarzyk, Jakub R. and Kasper, Lars and Kuhlmann, Levin and Lou, Kexin and Mantilla-Ramos, Yorguin-Jose and Mattingley, Jason B. and Meier, Michael L. and Morris, Jo and Narayanan, Akshaiy and Pestilli, Franco and Puce, Aina and Ribeiro, Fernanda L. and Rogasch, Nigel C. and Rorden, Chris and Schira, Mark M. and Shaw, Thomas B. and Sowman, Paul F. and Spitz, Gershon and Stewart, Ashley W. and Ye, Xincheng and Zhu, Judy D. and Narayanan, Aswin and Bollmann, Steffen}, year={2024}, month=jan }
+ @article{2de_Barbaro_2024, title={Maternal contingent responses to distress facilitate infant soothing but not in mothers with depression or infants high in negative affect.}, volume={60}, ISSN={0012-1649}, url={http://dx.doi.org/10.1037/dev0001607}, DOI={10.1037/dev0001607}, number={2}, journal={Developmental Psychology}, publisher={American Psychological Association (APA)}, author={de Barbaro, Kaya and Khante, Priyanka and Maier, Meeka and Goodman, Sherryl}, year={2024}, month=feb, pages={294–305} }
 
- @article{3Cheng_2022, title={Denoising diffusion weighted imaging data using convolutional neural networks}, volume={17}, ISSN={1932-6203}, url={http://dx.doi.org/10.1371/journal.pone.0274396}, DOI={10.1371/journal.pone.0274396}, number={9}, journal={PLOS ONE}, publisher={Public Library of Science (PLoS)}, author={Cheng, Hu and Vinci-Booher, Sophia and Wang, Jian and Caron, Bradley and Wen, Qiuting and Newman, Sharlene and Pestilli, Franco}, editor={Yap, Pew-Thian}, year={2022}, month=sep, pages={e0274396} }
+ @article{3Madden_Rusnak_2023, title={Spontaneous infant crying modulates vagal activity in real time}, volume={65}, ISSN={1098-2302}, url={http://dx.doi.org/10.1002/dev.22428}, DOI={10.1002/dev.22428}, number={7}, journal={Developmental Psychobiology}, publisher={Wiley}, author={Madden‐Rusnak, Anna and Micheletti, Megan and Dominguez, Alexis and de Barbaro, Kaya}, year={2023}, month=sep }
 
- @article{4Niso_2022, title={Open and reproducible neuroimaging: From study inception to publication}, volume={263}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2022.119623}, DOI={10.1016/j.neuroimage.2022.119623}, journal={NeuroImage}, publisher={Elsevier BV}, author={Niso, Guiomar and Botvinik-Nezer, Rotem and Appelhoff, Stefan and De La Vega, Alejandro and Esteban, Oscar and Etzel, Joset A. and Finc, Karolina and Ganz, Melanie and Gau, Rémi and Halchenko, Yaroslav O. and Herholz, Peer and Karakuzu, Agah and Keator, David B. and Markiewicz, Christopher J. and Maumet, Camille and Pernet, Cyril R. and Pestilli, Franco and Queder, Nazek and Schmitt, Tina and Sójka, Weronika and Wagner, Adina S. and Whitaker, Kirstie J. and Rieger, Jochem W.}, year={2022}, month=nov, pages={119623} }
+ @article{4de_Barbaro_2023, title={Infant crying predicts real-time fluctuations in maternal mental health in ecologically valid home settings.}, volume={59}, ISSN={0012-1649}, url={http://dx.doi.org/10.1037/dev0001530}, DOI={10.1037/dev0001530}, number={4}, journal={Developmental Psychology}, publisher={American Psychological Association (APA)}, author={de Barbaro, Kaya and Micheletti, Megan and Yao, Xuewen and Khante, Priyanka and Johnson, Mckensey and Goodman, Sherryl}, year={2023}, month=apr, pages={733–744} }
 
- @article{5Sreenivasan_2022, title={GPU-accelerated connectome discovery at scale}, volume={2}, ISSN={2662-8457}, url={http://dx.doi.org/10.1038/s43588-022-00250-z}, DOI={10.1038/s43588-022-00250-z}, number={5}, journal={Nature Computational Science}, publisher={Springer Science and Business Media LLC}, author={Sreenivasan, Varsha and Kumar, Sawan and Pestilli, Franco and Talukdar, Partha and Sridharan, Devarajan}, year={2022}, month=may, pages={298–306} }
+ @article{5Micheletti_2022, title={Validating a model to detect infant crying from naturalistic audio}, volume={55}, ISSN={1554-3528}, url={http://dx.doi.org/10.3758/s13428-022-01961-x}, DOI={10.3758/s13428-022-01961-x}, number={6}, journal={Behavior Research Methods}, publisher={Springer Science and Business Media LLC}, author={Micheletti, Megan and Yao, Xuewen and Johnson, Mckensey and de Barbaro, Kaya}, year={2022}, month=sep, pages={3187–3197} }
 
- @article{6Vinci_Booher_2022, title={Development of white matter tracts between and within the dorsal and ventral streams}, volume={227}, ISSN={1863-2661}, url={http://dx.doi.org/10.1007/s00429-021-02414-5}, DOI={10.1007/s00429-021-02414-5}, number={4}, journal={Brain Structure and Function}, publisher={Springer Science and Business Media LLC}, author={Vinci-Booher, S. and Caron, B. and Bullock, D. and James, K. and Pestilli, F.}, year={2022}, month=mar, pages={1457–1477} }
+ @article{6Morshed_2022, title={Food, Mood, Context: Examining College Students’ Eating Context and Mental Well-being}, volume={3}, ISSN={2637-8051}, url={http://dx.doi.org/10.1145/3533390}, DOI={10.1145/3533390}, number={4}, journal={ACM Transactions on Computing for Healthcare}, publisher={Association for Computing Machinery (ACM)}, author={Morshed, Mehrab Bin and Kulkarni, Samruddhi Shreeram and Saha, Koustuv and Li, Richard and Roper, Leah G. and Nachman, Lama and Lu, Hong and Mirabella, Lucia and Srivastava, Sanjeev and de Barbaro, Kaya and de Choudhury, Munmun and Plötz, Thomas and Abowd, Gregory}, year={2022}, month=oct, pages={1–26} }
 
- @article{7Bullock_2022, title={A taxonomy of the brain’s white matter: twenty-one major tracts for the 21st century}, volume={32}, ISSN={1460-2199}, url={http://dx.doi.org/10.1093/cercor/bhab500}, DOI={10.1093/cercor/bhab500}, number={20}, journal={Cerebral Cortex}, publisher={Oxford University Press (OUP)}, author={Bullock, Daniel N and Hayday, Elena A and Grier, Mark D and Tang, Wei and Pestilli, Franco and Heilbronner, Sarah R}, year={2022}, month=feb, pages={4524–4548} }
+ @article{7de_Barbaro_2022, title={Ten Lessons About Infants’ Everyday Experiences}, volume={31}, ISSN={1467-8721}, url={http://dx.doi.org/10.1177/09637214211059536}, DOI={10.1177/09637214211059536}, number={1}, journal={Current Directions in Psychological Science}, publisher={SAGE Publications}, author={de Barbaro, Kaya and Fausey, Caitlin M.}, year={2022}, month=feb, pages={28–33} }
 
- @article{8Babo_Rebelo_2021, title={Visual Information Routes in the Posterior Dorsal and Ventral Face Network Studied with Intracranial Neurophysiology and White Matter Tract Endpoints}, volume={32}, ISSN={1460-2199}, url={http://dx.doi.org/10.1093/cercor/bhab212}, DOI={10.1093/cercor/bhab212}, number={2}, journal={Cerebral Cortex}, publisher={Oxford University Press (OUP)}, author={Babo-Rebelo, M and Puce, A and Bullock, D and Hugueville, L and Pestilli, F and Adam, C and Lehongre, K and Lambrecq, V and Dinkelacker, V and George, N}, year={2021}, month=jul, pages={342–366} }
+ @article{8Levin_2021, title={Sensing everyday activity: Parent perceptions and feasibility}, volume={62}, ISSN={0163-6383}, url={http://dx.doi.org/10.1016/j.infbeh.2020.101511}, DOI={10.1016/j.infbeh.2020.101511}, journal={Infant Behavior and Development}, publisher={Elsevier BV}, author={Levin, Hannah I. and Egger, Dominique and Andres, Lara and Johnson, Mckensey and Bearman, Sarah Kate and de Barbaro, Kaya}, year={2021}, month=feb, pages={101511} }
 
- @article{9Echevarria_Cooper_2021, title={Mapping the Microstructure and Striae of the Human Olfactory Tract with Diffusion MRI}, volume={42}, ISSN={1529-2401}, url={http://dx.doi.org/10.1523/jneurosci.1552-21.2021}, DOI={10.1523/jneurosci.1552-21.2021}, number={1}, journal={The Journal of Neuroscience}, publisher={Society for Neuroscience}, author={Echevarria-Cooper, Shiloh L. and Zhou, Guangyu and Zelano, Christina and Pestilli, Franco and Parrish, Todd B. and Kahnt, Thorsten}, year={2021}, month=nov, pages={58–68} }
+ @article{9Wu_2021, title={Multi-modal data collection for measuring health, behavior, and living environment of large-scale participant cohorts}, volume={10}, ISSN={2047-217X}, url={http://dx.doi.org/10.1093/gigascience/giab044}, DOI={10.1093/gigascience/giab044}, number={6}, journal={GigaScience}, publisher={Oxford University Press (OUP)}, author={Wu, Congyu and Fritz, Hagen and Bastami, Sepehr and Maestre, Juan P and Thomaz, Edison and Julien, Christine and Castelli, Darla M and de Barbaro, Kaya and Bearman, Sarah Kate and Harari, Gabriella M and Cameron Craddock, R and Kinney, Kerry A and Gosling, Samuel D and Schnyer, David M and Nagy, Zoltan}, year={2021}, month=jun }
 
- @article{10Allen_2021, title={A massive 7T fMRI dataset to bridge cognitive neuroscience and artificial intelligence}, volume={25}, ISSN={1546-1726}, url={http://dx.doi.org/10.1038/s41593-021-00962-x}, DOI={10.1038/s41593-021-00962-x}, number={1}, journal={Nature Neuroscience}, publisher={Springer Science and Business Media LLC}, author={Allen, Emily J. and St-Yves, Ghislain and Wu, Yihan and Breedlove, Jesse L. and Prince, Jacob S. and Dowdle, Logan T. and Nau, Matthias and Caron, Brad and Pestilli, Franco and Charest, Ian and Hutchinson, J. Benjamin and Naselaris, Thomas and Kay, Kendrick}, year={2021}, month=dec, pages={116–126} }
-
- @article{11Eke_2022, title={International data governance for neuroscience}, volume={110}, ISSN={0896-6273}, url={http://dx.doi.org/10.1016/j.neuron.2021.11.017}, DOI={10.1016/j.neuron.2021.11.017}, number={4}, journal={Neuron}, publisher={Elsevier BV}, author={Eke, Damian O. and Bernard, Amy and Bjaalie, Jan G. and Chavarriaga, Ricardo and Hanakawa, Takashi and Hannan, Anthony J. and Hill, Sean L. and Martone, Maryann E. and McMahon, Agnes and Ruebel, Oliver and Crook, Sharon and Thiels, Edda and Pestilli, Franco}, year={2022}, month=feb, pages={600–612} }
-
- @article{12Puzniak_2021, title={CHIASM, the human brain albinism and achiasma MRI dataset}, volume={8}, ISSN={2052-4463}, url={http://dx.doi.org/10.1038/s41597-021-01080-w}, DOI={10.1038/s41597-021-01080-w}, number={1}, journal={Scientific Data}, publisher={Springer Science and Business Media LLC}, author={Puzniak, Robert J. and McPherson, Brent and Ahmadi, Khazar and Herbik, Anne and Kaufmann, Jörn and Liebe, Thomas and Gouws, Andre and Morland, Antony B. and Gottlob, Irene and Hoffmann, Michael B. and Pestilli, Franco}, year={2021}, month=nov }
-
- @article{13McPherson_2021, title={A single mode of population covariation associates brain networks structure and behavior and predicts individual subjects’ age}, volume={4}, ISSN={2399-3642}, url={http://dx.doi.org/10.1038/s42003-021-02451-0}, DOI={10.1038/s42003-021-02451-0}, number={1}, journal={Communications Biology}, publisher={Springer Science and Business Media LLC}, author={McPherson, Brent C. and Pestilli, Franco}, year={2021}, month=aug }
-
- @article{14Sani_2021, title={The human endogenous attentional control network includes a ventro-temporal cortical node}, volume={12}, ISSN={2041-1723}, url={http://dx.doi.org/10.1038/s41467-020-20583-5}, DOI={10.1038/s41467-020-20583-5}, number={1}, journal={Nature Communications}, publisher={Springer Science and Business Media LLC}, author={Sani, Ilaria and Stemmann, Heiko and Caron, Bradley and Bullock, Daniel and Stemmler, Torsten and Fahle, Manfred and Pestilli, Franco and Freiwald, Winrich A.}, year={2021}, month=jan }
-
- @article{15Hanke_2021, title={In defense of decentralized research data management}, volume={0}, ISSN={0947-0875}, url={http://dx.doi.org/10.1515/nf-2020-0037}, DOI={10.1515/nf-2020-0037}, number={0}, journal={Neuroforum}, publisher={Walter de Gruyter GmbH}, author={Hanke, Michael and Pestilli, Franco and Wagner, Adina S. and Markiewicz, Christopher J. and Poline, Jean-Baptiste and Halchenko, Yaroslav O.}, year={2021}, month=jan }
-
- @article{16Bert__2021, title={Classifyber, a robust streamline-based linear classifier for white matter bundle segmentation}, volume={224}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2020.117402}, DOI={10.1016/j.neuroimage.2020.117402}, journal={NeuroImage}, publisher={Elsevier BV}, author={Bertò, Giulia and Bullock, Daniel and Astolfi, Pietro and Hayashi, Soichi and Zigiotto, Luca and Annicchiarico, Luciano and Corsini, Francesco and De Benedictis, Alessandro and Sarubbo, Silvio and Pestilli, Franco and Avesani, Paolo and Olivetti, Emanuele}, year={2021}, month=jan, pages={117402} }
-
- @article{17Caron_2021, title={Collegiate athlete brain data for white matter mapping and network neuroscience}, volume={8}, ISSN={2052-4463}, url={http://dx.doi.org/10.1038/s41597-021-00823-z}, DOI={10.1038/s41597-021-00823-z}, number={1}, journal={Scientific Data}, publisher={Springer Science and Business Media LLC}, author={Caron, Bradley and Stuck, Ricardo and McPherson, Brent and Bullock, Daniel and Kitchell, Lindsey and Faskowitz, Joshua and Kellar, Derek and Cheng, Hu and Newman, Sharlene and Port, Nicholas and Pestilli, Franco}, year={2021}, month=feb }
-
- @article{18Schilling_2021, title={Tractography dissection variability: What happens when 42 groups dissect 14 white matter bundles on the same dataset?}, volume={243}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2021.118502}, DOI={10.1016/j.neuroimage.2021.118502}, journal={NeuroImage}, publisher={Elsevier BV}, author={Schilling, Kurt G. and Rheault, François and Petit, Laurent and Hansen, Colin B. and Nath, Vishwesh and Yeh, Fang-Cheng and Girard, Gabriel and Barakovic, Muhamed and Rafael-Patino, Jonathan and Yu, Thomas and Fischi-Gomez, Elda and Pizzolato, Marco and Ocampo-Pineda, Mario and Schiavi, Simona and Canales-Rodríguez, Erick J. and Daducci, Alessandro and Granziera, Cristina and Innocenti, Giorgio and Thiran, Jean-Philippe and Mancini, Laura and Wastling, Stephen and Cocozza, Sirio and Petracca, Maria and Pontillo, Giuseppe and Mancini, Matteo and Vos, Sjoerd B. and Vakharia, Vejay N. and Duncan, John S. and Melero, Helena and Manzanedo, Lidia and Sanz-Morales, Emilio and Peña-Melián, Ángel and Calamante, Fernando and Attyé, Arnaud and Cabeen, Ryan P. and Korobova, Laura and Toga, Arthur W. and Vijayakumari, Anupa Ambili and Parker, Drew and Verma, Ragini and Radwan, Ahmed and Sunaert, Stefan and Emsell, Louise and De Luca, Alberto and Leemans, Alexander and Bajada, Claude J. and Haroon, Hamied and Azadbakht, Hojjatollah and Chamberland, Maxime and Genc, Sila and Tax, Chantal M.W. and Yeh, Ping-Hong and Srikanchana, Rujirutana and Mcknight, Colin D. and Yang, Joseph Yuan-Mou and Chen, Jian and Kelly, Claire E. and Yeh, Chun-Hung and Cochereau, Jerome and Maller, Jerome J. and Welton, Thomas and Almairac, Fabien and Seunarine, Kiran K and Clark, Chris A. and Zhang, Fan and Makris, Nikos and Golby, Alexandra and Rathi, Yogesh and O’Donnell, Lauren J. and Xia, Yihao and Aydogan, Dogu Baran and Shi, Yonggang and Fernandes, Francisco Guerreiro and Raemaekers, Mathijs and Warrington, Shaun and Michielse, Stijn and Ramírez-Manzanares, Alonso and Concha, Luis and Aranda, Ramón and Meraz, Mariano Rivera and Lerma-Usabiaga, Garikoitz and Roitman, Lucas and Fekonja, Lucius S. and Calarco, Navona and Joseph, Michael and Nakua, Hajer and Voineskos, Aristotle N. and Karan, Philippe and Grenier, Gabrielle and Legarreta, Jon Haitz and Adluru, Nagesh and Nair, Veena A. and Prabhakaran, Vivek and Alexander, Andrew L. and Kamagata, Koji and Saito, Yuya and Uchida, Wataru and Andica, Christina and Abe, Masahiro and Bayrak, Roza G. and Wheeler-Kingshott, Claudia A.M. Gandini and D’Angelo, Egidio and Palesi, Fulvia and Savini, Giovanni and Rolandi, Nicolò and Guevara, Pamela and Houenou, Josselin and López-López, Narciso and Mangin, Jean-François and Poupon, Cyril and Román, Claudio and Vázquez, Andrea and Maffei, Chiara and Arantes, Mavilde and Andrade, José Paulo and Silva, Susana Maria and Calhoun, Vince D. and Caverzasi, Eduardo and Sacco, Simone and Lauricella, Michael and Pestilli, Franco and Bullock, Daniel and Zhan, Yang and Brignoni-Perez, Edith and Lebel, Catherine and Reynolds, Jess E and Nestrasil, Igor and Labounek, René and Lenglet, Christophe and Paulson, Amy and Aulicka, Stefania and Heilbronner, Sarah R. and Heuer, Katja and Chandio, Bramsh Qamar and Guaje, Javier and Tang, Wei and Garyfallidis, Eleftherios and Raja, Rajikha and Anderson, Adam W. and Landman, Bennett A. and Descoteaux, Maxime}, year={2021}, month=nov, pages={118502} }
-
- @article{19Hanekamp_2021, title={White matter alterations in glaucoma and monocular blindness differ outside the visual system}, volume={11}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-021-85602-x}, DOI={10.1038/s41598-021-85602-x}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Hanekamp, Sandra and Ćurčić-Blake, Branislava and Caron, Bradley and McPherson, Brent and Timmer, Anneleen and Prins, Doety and Boucard, Christine C. and Yoshida, Masaki and Ida, Masahiro and Hunt, David and Jansonius, Nomdo M. and Pestilli, Franco and Cornelissen, Frans W.}, year={2021}, month=mar }
-
+@Article{1,
+  title = {Understanding Postpartum Parents' Experiences via Two Digital Platforms.},
+  author = {Kaya {de Barbaro}},
+  journal = {Proceedings ACM on Human-Computer Interactions.},
+  year = {2023},
+}
