--- a/chaps.bib
+++ b/chaps.bib
@@ -1,7 +1,2 @@
-@InCollection{1,
-  title = {Mobile Sensing in Developmental Science: A practical guide for researchers.},
-  author = {Kaya {de Barbaro}},
-  booktitle = {Mobile Sensing in Psychology: Methods and Applications},
-  year = {2023},
-  publisher = {.},
-}
+ @inbook{Curley_2023, title={Transgenerational Epigenetics}, ISBN={9780323919098}, url={http://dx.doi.org/10.1016/b978-0-323-91909-8.00023-2}, DOI={10.1016/b978-0-323-91909-8.00023-2}, booktitle={Handbook of Epigenetics}, publisher={Elsevier}, author={Curley, James P. and Mashoodh, Rahia and Champagne, Frances A.}, year={2023}, pages={465–478} }
+
