--- a/preprints.bib
+++ b/preprints.bib
@@ -1,17 +1,2 @@
- @article{1Vinci_Booher_2023, title={Associative white matter tracts selectively predict sensorimotor learning}, url={http://dx.doi.org/10.1101/2023.01.10.523345}, DOI={10.1101/2023.01.10.523345}, publisher={Cold Spring Harbor Laboratory}, author={Vinci-Booher, S. and McDonald, D.J. and Berquist, E. and Pestilli, F.}, year={2023}, month=jan }
-
-@misc{https://doi.org/10.48550/arxiv.2208.02942,
-  doi = {10.48550/ARXIV.2208.02942},
-  url = {https://arxiv.org/abs/2208.02942},
-  author = {Liang, Xiaoxuan and Cohen, Aaron and Heinsfeld, Anibal Solón and Pestilli, Franco and McDonald, Daniel J.},
-  keywords = {Methodology (stat.ME), FOS: Computer and information sciences, FOS: Computer and information sciences},
-  title = {sparsegl: An R Package for Estimating Sparse Group Lasso},
-  publisher = {arXiv},
-  year = 20222},
-  copyright = {Creative Commons Attribution 4.0 International}
-}
-
- @article{3Allen_2021, title={A massive 7T fMRI dataset to bridge cognitive and computational neuroscience}, url={http://dx.doi.org/10.1101/2021.02.22.432340}, DOI={10.1101/2021.02.22.432340}, publisher={Cold Spring Harbor Laboratory}, author={Allen, Emily J. and St-Yves, Ghislain and Wu, Yihan and Breedlove, Jesse L. and Dowdle, Logan T. and Caron, Brad and Pestilli, Franco and Charest, Ian and Hutchinson, J. Benjamin and Naselaris, Thomas and Kay, Kendrick}, year={2021}, month=feb }
-
- @article{4Parker_2021, title={The Spread of COVID-19 Increases With Individual Mobility and Depends on Political Leaning}, url={http://dx.doi.org/10.21203/rs.3.rs-147801/v1}, DOI={10.21203/rs.3.rs-147801/v1}, publisher={Research Square Platform LLC}, author={Parker, Chris and Mejia, Jorge and Pestilli, Franco}, year={2021}, month=feb }
+ @article{1Lee_2021, title={Distinct inflammatory and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}, url={http://dx.doi.org/10.1101/2021.09.04.458987}, DOI={10.1101/2021.09.04.458987}, publisher={Cold Spring Harbor Laboratory}, author={Lee, Won and Milewski, Tyler M. and Dwortz, Madeleine F. and Young, Rebecca L. and Gaudet, Andrew D. and Fonken, Laura K. and Champagne, Frances A. and Curley, James P.}, year={2021}, month=sep }
 
