--- a/pubs.bib
+++ b/pubs.bib
@@ -1,24 +1,24 @@
- @article{1Khante_2023, title={Auditory chaos classification in real-world environments}, volume={5}, ISSN={2673-253X}, url={http://dx.doi.org/10.3389/fdgth.2023.1261057}, DOI={10.3389/fdgth.2023.1261057}, journal={Frontiers in Digital Health}, publisher={Frontiers Media SA}, author={Khante, Priyanka and Thomaz, Edison and de Barbaro, Kaya}, year={2023}, month=dec }
+ @article{1Curley_2023, title={Shaping the development of complex social behavior}, volume={1530}, ISSN={1749-6632}, url={http://dx.doi.org/10.1111/nyas.15076}, DOI={10.1111/nyas.15076}, number={1}, journal={Annals of the New York Academy of Sciences}, publisher={Wiley}, author={Curley, James P. and Champagne, Frances A.}, year={2023}, month=oct, pages={46–63} }
 
- @article{2de_Barbaro_2024, title={Maternal contingent responses to distress facilitate infant soothing but not in mothers with depression or infants high in negative affect.}, volume={60}, ISSN={0012-1649}, url={http://dx.doi.org/10.1037/dev0001607}, DOI={10.1037/dev0001607}, number={2}, journal={Developmental Psychology}, publisher={American Psychological Association (APA)}, author={de Barbaro, Kaya and Khante, Priyanka and Maier, Meeka and Goodman, Sherryl}, year={2024}, month=feb, pages={294–305} }
+ @article{2Turetsky_2022, title={Explaining the gender gap in negotiation performance: Social network ties outweigh internal barriers}, volume={79}, ISSN={1540-4560}, url={http://dx.doi.org/10.1111/josi.12536}, DOI={10.1111/josi.12536}, number={1}, journal={Journal of Social Issues}, publisher={Wiley}, author={Turetsky, Kate M. and Curley, James P. and Carter, Ashli B. and Purdie‐Greenaway, Valerie}, year={2022}, month=jul, pages={50–78} }
 
- @article{3Madden_Rusnak_2023, title={Spontaneous infant crying modulates vagal activity in real time}, volume={65}, ISSN={1098-2302}, url={http://dx.doi.org/10.1002/dev.22428}, DOI={10.1002/dev.22428}, number={7}, journal={Developmental Psychobiology}, publisher={Wiley}, author={Madden‐Rusnak, Anna and Micheletti, Megan and Dominguez, Alexis and de Barbaro, Kaya}, year={2023}, month=sep }
+ @article{3Ward_2022, title={Network Hawkes Process Models for Exploring Latent Hierarchy in Social Animal Interactions}, volume={71}, ISSN={1467-9876}, url={http://dx.doi.org/10.1111/rssc.12581}, DOI={10.1111/rssc.12581}, number={5}, journal={Journal of the Royal Statistical Society Series C: Applied Statistics}, publisher={Oxford University Press (OUP)}, author={Ward, Owen G. and Wu, Jing and Zheng, Tian and Smith, Anna L. and Curley, James P.}, year={2022}, month=jul, pages={1402–1426} }
 
- @article{4de_Barbaro_2023, title={Infant crying predicts real-time fluctuations in maternal mental health in ecologically valid home settings.}, volume={59}, ISSN={0012-1649}, url={http://dx.doi.org/10.1037/dev0001530}, DOI={10.1037/dev0001530}, number={4}, journal={Developmental Psychology}, publisher={American Psychological Association (APA)}, author={de Barbaro, Kaya and Micheletti, Megan and Yao, Xuewen and Khante, Priyanka and Johnson, Mckensey and Goodman, Sherryl}, year={2023}, month=apr, pages={733–744} }
+ @article{4Wu_2022, title={Markov-modulated Hawkes processes for modeling sporadic and bursty event occurrences in social interactions}, volume={16}, ISSN={1932-6157}, url={http://dx.doi.org/10.1214/21-aoas1539}, DOI={10.1214/21-aoas1539}, number={2}, journal={The Annals of Applied Statistics}, publisher={Institute of Mathematical Statistics}, author={Wu, Jing and Ward, Owen G. and Curley, James and Zheng, Tian}, year={2022}, month=jun }
 
- @article{5Micheletti_2022, title={Validating a model to detect infant crying from naturalistic audio}, volume={55}, ISSN={1554-3528}, url={http://dx.doi.org/10.3758/s13428-022-01961-x}, DOI={10.3758/s13428-022-01961-x}, number={6}, journal={Behavior Research Methods}, publisher={Springer Science and Business Media LLC}, author={Micheletti, Megan and Yao, Xuewen and Johnson, Mckensey and de Barbaro, Kaya}, year={2022}, month=sep, pages={3187–3197} }
+ @article{5Lee_2022, title={Social status mediated variation in hypothalamic transcriptional profiles of male mice}, volume={142}, ISSN={0018-506X}, url={http://dx.doi.org/10.1016/j.yhbeh.2022.105176}, DOI={10.1016/j.yhbeh.2022.105176}, journal={Hormones and Behavior}, publisher={Elsevier BV}, author={Lee, W. and Dwortz, M.F. and Milewski, T.M. and Champagne, F.A. and Curley, J.P.}, year={2022}, month=jun, pages={105176} }
 
- @article{6Morshed_2022, title={Food, Mood, Context: Examining College Students’ Eating Context and Mental Well-being}, volume={3}, ISSN={2637-8051}, url={http://dx.doi.org/10.1145/3533390}, DOI={10.1145/3533390}, number={4}, journal={ACM Transactions on Computing for Healthcare}, publisher={Association for Computing Machinery (ACM)}, author={Morshed, Mehrab Bin and Kulkarni, Samruddhi Shreeram and Saha, Koustuv and Li, Richard and Roper, Leah G. and Nachman, Lama and Lu, Hong and Mirabella, Lucia and Srivastava, Sanjeev and de Barbaro, Kaya and de Choudhury, Munmun and Plötz, Thomas and Abowd, Gregory}, year={2022}, month=oct, pages={1–26} }
+ @article{6Padilla_Coreano_2022, title={Cortical ensembles orchestrate social competition through hypothalamic outputs}, volume={603}, ISSN={1476-4687}, url={http://dx.doi.org/10.1038/s41586-022-04507-5}, DOI={10.1038/s41586-022-04507-5}, number={7902}, journal={Nature}, publisher={Springer Science and Business Media LLC}, author={Padilla-Coreano, Nancy and Batra, Kanha and Patarino, Makenzie and Chen, Zexin and Rock, Rachel R. and Zhang, Ruihan and Hausmann, Sébastien B. and Weddington, Javier C. and Patel, Reesha and Zhang, Yu E. and Fang, Hao-Shu and Mishra, Srishti and LeDuke, Deryn O. and Revanna, Jasmin and Li, Hao and Borio, Matilde and Pamintuan, Rachelle and Bal, Aneesh and Keyes, Laurel R. and Libster, Avraham and Wichmann, Romy and Mills, Fergil and Taschbach, Felix H. and Matthews, Gillian A. and Curley, James P. and Fiete, Ila R. and Lu, Cewu and Tye, Kay M.}, year={2022}, month=mar, pages={667–671} }
 
- @article{7de_Barbaro_2022, title={Ten Lessons About Infants’ Everyday Experiences}, volume={31}, ISSN={1467-8721}, url={http://dx.doi.org/10.1177/09637214211059536}, DOI={10.1177/09637214211059536}, number={1}, journal={Current Directions in Psychological Science}, publisher={SAGE Publications}, author={de Barbaro, Kaya and Fausey, Caitlin M.}, year={2022}, month=feb, pages={28–33} }
+ @article{7Milewski_2022, title={Behavioural and physiological plasticity in social hierarchies}, volume={377}, ISSN={1471-2970}, url={http://dx.doi.org/10.1098/rstb.2020.0443}, DOI={10.1098/rstb.2020.0443}, number={1845}, journal={Philosophical Transactions of the Royal Society B: Biological Sciences}, publisher={The Royal Society}, author={Milewski, T. M. and Lee, W. and Champagne, F. A. and Curley, J. P.}, year={2022}, month=jan }
 
- @article{8Levin_2021, title={Sensing everyday activity: Parent perceptions and feasibility}, volume={62}, ISSN={0163-6383}, url={http://dx.doi.org/10.1016/j.infbeh.2020.101511}, DOI={10.1016/j.infbeh.2020.101511}, journal={Infant Behavior and Development}, publisher={Elsevier BV}, author={Levin, Hannah I. and Egger, Dominique and Andres, Lara and Johnson, Mckensey and Bearman, Sarah Kate and de Barbaro, Kaya}, year={2021}, month=feb, pages={101511} }
+ @article{8Strauss_2022, title={DomArchive: a century of published dominance data}, volume={377}, ISSN={1471-2970}, url={http://dx.doi.org/10.1098/rstb.2020.0436}, DOI={10.1098/rstb.2020.0436}, number={1845}, journal={Philosophical Transactions of the Royal Society B: Biological Sciences}, publisher={The Royal Society}, author={Strauss, Eli D. and DeCasien, Alex R. and Galindo, Gabriela and Hobson, Elizabeth A. and Shizuka, Daizaburo and Curley, James P.}, year={2022}, month=jan }
 
- @article{9Wu_2021, title={Multi-modal data collection for measuring health, behavior, and living environment of large-scale participant cohorts}, volume={10}, ISSN={2047-217X}, url={http://dx.doi.org/10.1093/gigascience/giab044}, DOI={10.1093/gigascience/giab044}, number={6}, journal={GigaScience}, publisher={Oxford University Press (OUP)}, author={Wu, Congyu and Fritz, Hagen and Bastami, Sepehr and Maestre, Juan P and Thomaz, Edison and Julien, Christine and Castelli, Darla M and de Barbaro, Kaya and Bearman, Sarah Kate and Harari, Gabriella M and Cameron Craddock, R and Kinney, Kerry A and Gosling, Samuel D and Schnyer, David M and Nagy, Zoltan}, year={2021}, month=jun }
+ @article{9Dwortz_2022, title={Neural systems that facilitate the representation of social rank}, volume={377}, ISSN={1471-2970}, url={http://dx.doi.org/10.1098/rstb.2020.0444}, DOI={10.1098/rstb.2020.0444}, number={1845}, journal={Philosophical Transactions of the Royal Society B: Biological Sciences}, publisher={The Royal Society}, author={Dwortz, Madeleine F. and Curley, James P. and Tye, Kay M. and Padilla-Coreano, Nancy}, year={2022}, month=jan }
 
-@Article{1,
-  title = {Understanding Postpartum Parents' Experiences via Two Digital Platforms.},
-  author = {Kaya {de Barbaro}},
-  journal = {Proceedings ACM on Human-Computer Interactions.},
-  year = {2023},
-}
+ @article{10Strauss_2022, title={The centennial of the pecking order: current state and future prospects for the study of dominance hierarchies}, volume={377}, ISSN={1471-2970}, url={http://dx.doi.org/10.1098/rstb.2020.0432}, DOI={10.1098/rstb.2020.0432}, number={1845}, journal={Philosophical Transactions of the Royal Society B: Biological Sciences}, publisher={The Royal Society}, author={Strauss, Eli D. and Curley, James P. and Shizuka, Daizaburo and Hobson, Elizabeth A.}, year={2022}, month=jan }
+
+ @article{11Chase_2022, title={Networks never rest: An investigation of network evolution in three species of animals}, volume={68}, ISSN={0378-8733}, url={http://dx.doi.org/10.1016/j.socnet.2021.09.002}, DOI={10.1016/j.socnet.2021.09.002}, journal={Social Networks}, publisher={Elsevier BV}, author={Chase, Ivan D. and Coelho, Darius and Lee, Won and Mueller, Klaus and Curley, James P.}, year={2022}, month=jan, pages={356–373} }
+
+ @article{12Lee_2021, title={Effect of relative social rank within a social hierarchy on neural activation in response to familiar or unfamiliar social signals}, volume={11}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-021-82255-8}, DOI={10.1038/s41598-021-82255-8}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Lee, Won and Dowd, Hollie N. and Nikain, Cyrus and Dwortz, Madeleine F. and Yang, Eilene D. and Curley, James P.}, year={2021}, month=feb }
+
